Change find command functionality and add test cases